<resources>
    <string name="app_name">CoordinatorEps</string>
    <string name="about">关于</string>
    <string name="about_content">这个Demo展示了不同的CoordinatorLayout与其他控件一起协同工作的不同效果,也是这篇博客中所有的Demo集合,
        对自己也是一个总结,如果能帮到你,就更好了.\n\n

    愿大家都有一个美好的今天...
    </string>
    <string name="header_examples">Examples</string>
    <string name="item_coordinator_floating_snack">Coordinator Snack Float</string>
    <string name="github">GitHub</string>
    <string name="switch_no_coordinatorlayout">不用CoordinatorLayout</string>
    <string name="switch_with_coordinatorlayout">使用CoordinatorLayout</string>

    <string name="coorditor_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="tablayout">TablayoutExm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arrbarlayout">AppBarLayoutExp</string>
    <string name="card_text">因为我们没有什么不同
                            ,天黑时我们仰望同一片星空
                            ,没有追求和付出哪来的成功
                            ,谁说我们一定要走别人的路
                            ,谁说辉煌背后没有痛苦
                            ,只要为了梦想不服输
                            ,再苦也不停止脚步</string>
    <string name="collapsing">CollapsingToolbarExp</string>
    <string name="cusbehavior">CusBehaviorExp</string>

</resources>
